 * src/win32.c: Fix crashes on Windows when error argument of
                utils_spawn_* is NULL.
 * src/build.c, src/win32.c, src/win32.h:
   Add win32_get_exit_status() to retrieve the exit code from a
   command on Windows (code moved from build.c).
 * geany.spec.in: Add pkg-config file and new include directory to the
                  files section (thanks to Dominic Hopf).


2008-03-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, doc/plugins.dox:
   Update documentation for plugin_key_group[] to mention declaring it
   manually.
 * src/keybindings.c, src/keybindings.h, src/plugins.c, doc/plugins.dox:
   Check plugin keybinding group name is valid.
   Ignore plugin keybinding groups with no elements defined.
 * src/utils.c, src/document.c:
   Fix Doxygen undocumented parameter warnings.


2008-03-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.html, doc/geany.txt, src/search.c:
   Use monospace font for text entry fields in search dialogs and add
   a notice how to change the used font (#1907117).
 * src/plugins.c: Don't load all available plugins on startup, it's only
                  necessary opening the plugin manager.
 * src/keyfile.c, src/search.c:
   Use the default values for various tools if they don't exist in the
   config file instead of using g_find_program_in_path(), patch by
   Yura Siamashka (thanks).
   Fix executable check for grep command.
 * scintilla/include/Makefile.am, src/Makefile.am, plugins/Makefile.am,
   tagmanager/include/Makefile.am, Makefile.am, geany.pc.in,
   configure.in:
   Install header files and add a pkg-config file for external plugins.
 * geany.glade, src/interface.c:
   Add missing accelerator for string "Toggle All Additional Widgets".
 * plugins/htmlchars.c: Use a separate string for keybinding label to
                        avoid display of an underscore.
 * src/callbacks.c, src/tools.c: Fix compiler warnings about